Update portfolio layout and add assets
Added right-arrow.png image asset and created an empty app.js file. Updated index2.html to include new arrow image, revised header text, and added labels to option icons. Enhanced styles2.css for improved layout, responsiveness, and visual effects, including new classes and media queries.

--- a/index2.html
+++ b/index2.html
@@ -5,13 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfólio</title>
     <link rel="stylesheet" href="styles2.css">
+    <script src="app.js"></script>
 </head>
 <body>
     <div class="container">
         <header>
             <div class="part1">
+                <div class="arrow">
+                    <img src="IMAGENS/right-arrow.png" alt="">
+                </div>
                 <p class="forte">Olá<span class="mudar">.</span></p>
-                <p>Eu sou Carol</p>
+                <p>Eu sou Ana <span class="sublinhar">Caroliny</span></p>
                 <p class="forte">Estudante</p>
             </div>
             <div class="capa">
@@ -22,15 +26,19 @@
             <div class="lista">
                 <div class="opcao">
                     <img src="https://cdn-icons-png.flaticon.com/512/763/763891.png" alt="">
+                    <p>Corrida</p>
                 </div>
                 <div class="opcao">
                     <img src="https://cdn-icons-png.flaticon.com/512/2829/2829737.png" alt="">
+                    <p>Música</p>
                 </div>
                 <div class="opcao">
                     <img src="https://cdn-icons-png.flaticon.com/512/1208/1208884.png" alt="">
+                    <p>Programação</p>
                 </div>
                 <div class="opcao">
                     <img src="https://cdn-icons-png.flaticon.com/512/79/79495.png" alt="">
+                    <p>Ensino</p>
                 </div>
             </div>
         </aside>
